<package format="2">
    <name>tool_changing_capability</name>
    <version>0.0.1</version>
    <description>TODO</description>
    <author email="TODO@TODO.com">TODO</author>

    <maintainer email="TODO@TODO.com">TODO</maintainer>

    <license>BSD</license>

    <url type="website">TODO</url>
    <url type="bugtracker">TODO</url>
    <url type="repository">TODO</url>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <build_depend>moveit_common</build_depend>

    <depend>moveit_core</depend>
    <depend>moveit_ros_planning</depend>
    <depend>moveit_ros_move_group</depend>
    <depend>tool_changing_capability_msgs</depend>
    <depend>rclcpp</depend>
    <depend version_gte="1.11.2">pluginlib</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>
