<package format="3">
    <name>tool_changing_capability</name>
    <version>0.0.1</version>
    <description>MoveGroup capability to dynamically change end-effectors</description>
    <author email="jafar@picknik.ai">Jafar Abdi</author>

    <maintainer email="jafar@picknik.ai">Jafar Abdi</maintainer>

    <license>BSD</license>

    <url type="website">https://github.com/PickNikRobotics/tool_changing</url>
    <url type="bugtracker">https://github.com/PickNikRobotics/tool_changing/issues</url>
    <url type="repository">https://github.com/PickNikRobotics/tool_changing</url>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <build_depend>moveit_common</build_depend>

    <depend>moveit_core</depend>
    <depend>moveit_ros_planning</depend>
    <depend>moveit_ros_move_group</depend>
    <depend>tool_changing_capability_msgs</depend>
    <depend>rclcpp</depend>
    <depend>pluginlib</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>
