<package format="3">
  <name>tool_changing_capability_msgs</name>
  <version>0.11.2</version>
  <description>TODO</description>
  <author email="TODO@TODO.com">TODO</author>

  <maintainer email="TODO@TODO.com">TODO</maintainer>

  <license>BSD</license>  
  <url type="website">TODO</url>
  <url type="bugtracker">TODO</url>
  <url type="repository">TODO</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>

  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_cmake</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
