<package format="3">
  <name>tool_changing_capability_msgs</name>
  <version>0.0.1</version>
  <description>Services used by the tool changing capability</description>
  <author email="jafar@picknik.ai">Jafar Abdi</author>

  <maintainer email="jafar@picknik.ai">Jafar Abdi</maintainer>

  <license>BSD</license>
  <url type="website">https://github.com/PickNikRobotics/tool_changing</url>
  <url type="bugtracker">https://github.com/PickNikRobotics/tool_changing/issues</url>
  <url type="repository">https://github.com/PickNikRobotics/tool_changing</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>

  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_cmake</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
